themes/colors/style_rtl.css
/**
 * Styles for rtl
 *
 * needed to fix some of the RTL theme problems
 *
 * @package webtrees
 * @subpackage Themes
 * @version $Id$
 */
body {
	direction: rtl;
	text-align: right;
}
html {
	direction: rtl;
	white-space: normal;
}
#footer {
	text-align: center;
}
.person_box, .person_boxF, .person_boxNN {
	text-align: right;
}
.footer {
	text-align: left;
	direction: rtl;
}
.image {
	margin-right: 0px;
	margin-left: 15px;
}
#header {
	width: 100%;
	text-align: right;
	direction: rtl;
	caption-side: left;
	display: table;
}
.blockhc {
	padding-left: 15px;
	padding-right: 5px;
}
.blockh2, .blockhc, .door {
	direction: rtl;
}
.door dd {
	float: right;
}
.toplinks_right {
padding-left: 15px;
} 
.icon, .adminicon {
border:none;
padding-top:1px;
padding-left:6px;
padding-right:0pt;
}

.blockh1 {
	background-image: url(images/right1B.gif);
}

.blockh3 {
	background-image: url(images/right3.gif);
}

#login_block .blockh1 {
	background-image: url(images/right1G.gif);
}

#logout_block .blockh1 {
	background-image: url(images/right1R.gif);
}
/* jquery css THEME adjustments for RTL */
/* @version $Id$ */

/* Tabs --------------------------------*/
.ui-tabs { direction: rtl; }

.ui-tabs .ui-tabs-nav li.ui-tabs-selected,
.ui-tabs .ui-tabs-nav li.ui-state-default {float: right; }
.ui-tabs .ui-tabs-nav li a { float: right; }

/* Navigator & Flyout menu Styles ------*/
.flyoutrtl {
	color:#000000; 
	text-align: right;
	margin-top: -20px;
	left: 210px;
	padding: 3px;
}
.flyout2rtl {
	color:#000000; 
	text-align: right;
	margin-top: -2px;
	right: 64px;
	padding: 3px;
}
.flyout2rtl a:hover{
	color:red;
}
#flyout3 {
	text-align: right;
}

